# crosscompile-gtk-example

./: CMakeLists.txt
src/: main.cpp
